# my-jupyter-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
kaggle/: func_home_credit_default_risk.py  func_mlb_player_digital_engagement_forecasting.py  home_credit_default_risk.py  mlb_player_digital_engagement_forecasting.py
nn/: backpropagation.py  dataset_dataloder.py  mini_batch.py  mlp.py  mlp_dataloader.py  mnist.py  nn_module.py  optimizer.py  save_load.py  tr_autograd.py  tr_tensor.py  train_test_split.py
