[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = "A Python ML/DL/data analysis project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "ml_project" }]

[tool.poetry.dependencies]
python = "^3.11"

# データ分析
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.1"

# 可視化
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"

# 機械学習
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
catboost = "^1.2.5"

# ディープラーニング
tensorflow = "^2.16.1"
torch = "^2.2.0"
torchvision = "^0.17.2"

# その他便利系
jupyterlab = "^4.1.6"
notebook = "^7.2.0"
ipython = "^8.24.0"
tqdm = "^4.66.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
